--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.16.1", features = ["bevy_dev_tools"] }
+bevy = { version = "0.16.1", features = ["bevy_dev_tools", "jpeg"] }
 
 
 [profile.dev]
