--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 bevy = { version = "0.16.1", features = ["bevy_dev_tools", "jpeg"] }
 bevy_asset_loader = "0.23.0"
+bevy_simple_subsecond_system = "0.2.0"
+rand = "0.9.2"
 
 
 [profile.dev]
